crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__manifest_template.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/manifest_template.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

sui move new example
cat example/Move.toml

----- results -----
success: true
exit_code: 0
----- stdout -----
# Full documentation for Move.toml can be found at: docs.sui.io

[package]
name = "example"
edition = "2024"         # use "2024" for Move 2024 edition
# license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
# authors = ["..."]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
# flavor = sui

# add the environment names and their chain ids here
# by default, testnet and mainnet are implicitly available
# example for devnet: devnet = "abcdef1234"
# [environments]
# chain_name = "{chain_id}"

# Add your dependencies here or leave empty (for adding automatically sui and std deps)
# [dependencies]

# Depedency on local package in the directory `../bar`, which can be referred to in the Move code as "bar::module::function"
# bar = { local = "../bar" }

# Git dependency
# foo = { git = "https://example.com/foo.git", rev = "releases/v1", subdir = "foo" }

# Setting `override = true` forces your dependencies to use this version of the package.
# This is required if you need to link against a different version from one of your dependencies, or if
# two of your dependencies depend on different versions of the same package
# foo = { git = "https://example.com/foo.git", rev = "releases/v1", override = true}

# Use to replace dependencies for specific environments
# [dep-replacements.mainnet]
# foo = { git = "https://example.com/foo.git", original-id = "0x12g0cc1a418ff3bebce0ff9ec3961e6cc794af9bc3a4114fb138d00a4c9274bb", published-at = "0x12ga0cc1a418ff3bebce0ff9ec3961e6cc794af9bc3a4114fb138d00a4c9274bb", use-environment = "mainnet_beta" }
----- stderr -----
