crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__new_then_test.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/new_then_test.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that sui move new followed by sui move test succeeds
sui move new example
cd example && sui move test

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY MoveStdlib
INCLUDING DEPENDENCY Sui
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
